# ape-dts

./: .env  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.github.workflow  Dockerfile.mac.cross  Dockerfile_release  Dockerfile_release_cross  Makefile  README.md  README_ZH.md  entrypoint.sh  log4rs.yaml  rust-toolchain.toml
dt-common/: Cargo.toml
dt-common/src/: constants.rs  error.rs  lib.rs  logger.rs  rdb_filter.rs  syncer.rs  task_config.ini  time_filter.rs
dt-common/src/adaptor/: pg_col_value_convertor.rs  sqlx_ext.rs
dt-common/src/config/: config_enums.rs  config_loader.rs  config_token_parser.rs  data_marker_config.rs  datamarker_config.rs  extractor_config.rs  filter_config.rs  heartbeat_config.rs  ini_loader.rs  meta_center_config.rs  metrics_config.rs  mod.rs  monitor_config.rs  parallelizer_config.rs  pipeline_config.rs  processor_config.rs  resumer_config.rs  router_config.rs  runtime_config.rs  s3_config.rs  sinker_config.rs  task_config.rs
dt-common/src/datamarker/: mod.rs  transaction_control.rs
dt-common/src/log/: mod.rs
dt-common/src/meta/: col_value.rs  db_enum.rs  db_enums.rs  ddl_data.rs  ddl_type.rs  dt_data.rs  dt_queue.rs  foreign_key.rs  mod.rs  position.rs  rdb_meta_manager.rs  rdb_tb_meta.rs  row_data.rs  row_type.rs  syncer.rs
dt-common/src/monitor/: counter.rs  counter_type.rs  group_monitor.rs  mod.rs  monitor.rs  prometheus_metrics.rs  statistic_counter.rs  task_metrics.rs  task_monitor.rs  time_window_counter.rs
dt-common/src/utils/: config_url_util.rs  database_mock.rs  file_util.rs  limit_queue.rs  mod.rs  position_util.rs  rdb_filter.rs  redis_util.rs  sql_util.rs  time_util.rs  transaction_circle_control.rs  url_util.rs  work_dir_util.rs
dt-connector/: Cargo.toml
dt-connector/src/: conn_util.rs  data_marker.rs  lib.rs  rdb_query_builder.rs  rdb_router.rs  sql_util.rs
dt-connector/src/avro/: avro_converter.rs  avro_converter_schema.rs
dt-connector/src/check_log/: check_log.rs  log_reader.rs  log_type.rs  mod.rs
dt-connector/src/datamarker/: basic_transaction_marker.rs  mod.rs  rdb_basic.rs  traits.rs
dt-connector/src/extractor/: base_check_extractor.rs  base_extractor.rs  extractor_monitor.rs  mod.rs  rdb_filter.rs  snapshot_resumer.rs
dt-connector/src/meta_fetcher/: mod.rs
dt-connector/src/sinker/: base_checker.rs  base_sinker.rs  base_struct_sinker.rs  dummy_sinker.rs  foxlake_sinker.rs  mod.rs  open_faas_sinker.rs  rdb_router.rs  sql_sinker.rs
dt-meta/: Cargo.toml
dt-meta/src/: col_value.rs  db_enums.rs  ddl_data.rs  ddl_type.rs  dt_data.rs  lib.rs  position.rs  rdb_meta_manager.rs  rdb_tb_meta.rs  row_data.rs  syncer.rs
dt-meta/src/adaptor/: mysql_col_value_convertor.rs  pg_col_value_convertor.rs  sqlx_ext.rs
dt-meta/src/avro/: avro_converter.rs  avro_converter_schema.rs  mod.rs
dt-meta/src/mongo/: mongo_cdc_source.rs  mongo_constant.rs  mongo_key.rs
dt-meta/src/mysql/: mod.rs  mysql_col_type.rs  mysql_meta_manager.rs  mysql_tb_meta.rs
dt-meta/src/pg/: pg_meta_manager.rs  pg_tb_meta.rs  type_registry.rs
dt-meta/src/redis/: mod.rs  redis_entry.rs  redis_object.rs  redis_statistic_type.rs  redis_write_method.rs
dt-meta/src/sql_parser/: ddl_parser.rs
dt-meta/src/struct_meta/: col_model.rs  database_model.rs  db_table_model.rs  mod.rs  pg_enums.rs
dt-pipeline/: Cargo.toml
dt-pipeline/src/: base_parallelizer.rs  base_pipeline.rs  check_parallelizer.rs  http_server_pipeline.rs  lib.rs  lua_processor.rs  merge_parallelizer.rs  mongo_merger.rs  mongo_parallelizer.rs  partition_parallelizer.rs  pipeline.rs  rdb_merger.rs  rdb_partitioner.rs  serial_parallelizer.rs  snapshot_parallelizer.rs  table_parallelizer.rs  transaction_pipeline.rs
dt-pipeline/src/drainers/: basic.rs  mod.rs  mysql_transaction_filter.rs  traits.rs
dt-pipeline/src/filters/: mod.rs  mysql_transaction_filter.rs  traits.rs
dt-pipeline/src/utils/: drainer_util.rs  filter_util.rs  mod.rs
dt-precheck/: Cargo.toml
dt-precheck/src/: error.rs  lib.rs  main.rs
dt-precheck/src/builder/: mod.rs  prechecker_builder.rs
dt-precheck/src/checker/: mod.rs  mongo_checker.rs  mysql_checker.rs  pg_checker.rs  postgresql_checker.rs  traits.rs
dt-precheck/src/config/: mod.rs  precheck_config.rs  task_config.rs
dt-precheck/src/connector/: checker_connector.rs  mod.rs
dt-precheck/src/fetcher/: mod.rs  traits.rs
dt-precheck/src/meta/: check_item.rs  check_result.rs  database_mode.rs  db_table_model.rs  mod.rs
dt-precheck/src/prechecker/: basic.rs  mod.rs  mongo_prechecker.rs  mysql_prechecker.rs  pg_prechecker.rs  redis_prechecker.rs  traits.rs
dt-precheck/src/test/: README.md  integration_test.rs  task_config.ini  utils.rs
dt-struct/: Cargo.toml
dt-struct/src/: error.rs  main.rs  traits.rs
dt-struct/src/config/: mod.rs  struct_config.rs  task_config.rs
dt-struct/src/factory/: database_worker_builder.rs  mod.rs
dt-struct/src/meta/: mod.rs
dt-struct/src/test/: README.md  integration_test.rs  mod.rs  task_config.ini  utils.rs
dt-struct/src/utils/: database_model_ops.rs  mod.rs  queue_operator.rs
dt-task/: Cargo.toml
dt-task/src/: extractor_util.rs  lib.rs  main.rs  parallelizer_util.rs  pipeline_util.rs  redis_util.rs  sinker_util.rs  task_runner.rs  task_util.rs
dt-task/src/tests/: .env  README.md  mod.rs  test_config_util.rs
dt-tests/: .env.ci  Cargo.toml  README.md  README_ZH.md  docker-compose.ci.yml
dt-tests/docker/: README.md
dt-tests/k8s/starrocks/: deployment.yaml  service.yaml
dt-tests/tests/: .env  docker-compose.yml  integration_test.rs  test_config_util.rs
dt-tests/tests/log_reader/: log_reader_tests.rs  mod.rs
dt-tests/tests/mongo_to_mongo/: cdc_tests.rs  check_tests.rs  mod.rs  precheck_tests.rs  review_tests.rs  revise_tests.rs  snapshot_tests.rs
dt-tests/tests/mysql_to_clickhouse/: cdc_tests.rs  snapshot_tests.rs  struct_tests.rs  table_schemas.rs
dt-tests/tests/mysql_to_doris/: cdc_2_1_0_tests.rs  snapshot_2_1_0_tests.rs  struct_2_1_0_tests.rs
dt-tests/tests/mysql_to_foxlake/: cdc_tests.rs  snapshot_tests.rs
(+1756 files in other folders)
