[workspace]

members = [
    "dt-common",
    "dt-meta",
    "dt-precheck",
    "dt-connector",
    "dt-parallelizer",
    "dt-pipeline",
    "dt-task",
    "dt-main",
    "dt-tests"
]

exclude = [
    "./plugins/mysql-binlog-connector-rust"
]

[workspace.dependencies]
sqlx = {version = "0.6.2", features = ["runtime-async-std-rustls", "mysql", "postgres", "decimal", "bigdecimal", "ipnetwork", "mac_address", "bit-vec", "time", "chrono", "json", "uuid"]}
futures = "0.3.25"
mysql-binlog-connector-rust = { path = "./plugins/mysql-binlog-connector-rust" }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
chrono = "0.4.23"
byteorder = "1.4.3"
concurrent-queue = "2.0.0"
url = "2.3.1"
serde_yaml = "0.9.16"
log = "0.4.17"
log4rs = "1.2.0"
serial_test = "2.0.0"
async-trait = "0.1.64"
async-recursion = "1.0.2"
tokio-postgres = {git = "https://github.com/petrosagg/rust-postgres"}
postgres-protocol = {git = "https://github.com/petrosagg/rust-postgres"}
postgres-types= {git = "https://github.com/petrosagg/rust-postgres"}
tokio = { version = "1.25.0", features = ["full"] }
bytes = "1.0"
configparser = "3.0.2"
async-mutex = "1.4.0"
project-root = "0.2.2"
strum = { version = "0.24.1", features = ["derive"] }
regex = "1.5.4"
rdkafka = "0.29.0"
kafka = "0.9.0"
reqwest = "0.11.16"
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
uuid = { version = "1.3.1", features = ["v4"] }
nom = "7.1.3"
mongodb = { version = "2.5.0" }
dotenv = "0.15.0"