[workspace]
resolver = "2"

members = [
    "dt-common",
    "dt-precheck",
    "dt-connector",
    "dt-parallelizer",
    "dt-pipeline",
    "dt-task",
    "dt-main",
    "dt-tests"
]

[workspace.lints.clippy]
assigning_clones = "allow"

[workspace.dependencies]
sqlx = {git = "https://github.com/qianyiwen2019/sqlx", features = ["runtime-async-std-rustls", "mysql", "postgres", "bigdecimal", "ipnetwork", "mac_address", "bit-vec", "time", "chrono", "json", "uuid"]}
futures = "0.3.25"
mysql-binlog-connector-rust = "0.2.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
chrono = "0.4.38"
byteorder = "1.4.3"
concurrent-queue = "2.0.0"
url = "2.3.1"
serde_yaml = "0.9.16"
log = "0.4.17"
log4rs = "1.2.0"
serial_test = "3.0.0"
async-trait = "0.1.64"
async-recursion = "1.0.2"
tokio-postgres = {git = "https://github.com/qianyiwen2019/rust-postgres"}
postgres-protocol = {git = "https://github.com/qianyiwen2019/rust-postgres"}
postgres-types= {git = "https://github.com/qianyiwen2019/rust-postgres"}
tokio = { version = "1.25.0", features = ["full"] }
bytes = "1.0"
configparser = "3.0.2"
async-mutex = "1.4.0"
project-root = "0.2.2"
strum = { version = "0.25.0", features = ["derive"] }
regex = "1.5.4"
rdkafka = { version = "0.36.2", features = ["cmake-build", "libz-static"] }
kafka = "0.10.0"
reqwest = {git = "https://github.com/qianyiwen2019/reqwest", features = ["redirect-with-sensitive-headers"] }
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
uuid = { version = "1.3.1", features = ["v4"] }
nom = "7.1.3"
mongodb = { version = "2.5.0" }
dotenv = "0.15.0"
redis =  { version = "0.27.4", features = ["tokio-comp"] } 
thiserror = "1.0.44"
async-std = "1.12.0"
apache-avro =  { version = "0.16.0", features = ["derive"]}
ratelimit = "0.7.1"
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
anyhow = {version = "1.0.83", features = ["backtrace"]}
rust_decimal = "1.35.0"
orc-format = {git = "https://github.com/qianyiwen2019/orc-format"}
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"]}
actix-web = "4.9.0"
hex = "0.4.3"
clickhouse = "0.13.1"