[package]
name = "dt-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
strum = { version = "0.21.0", features = ["derive"] }
project-root = "0.2.2"
dotenv = "0.15.0"
sqlx = {version = "0.6.2", features = ["runtime-async-std-rustls", "mysql", "postgres", "decimal", "bigdecimal", "ipnetwork", "mac_address", "bit-vec", "time", "chrono", "json", "uuid"]}