[package]
name = "dt-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
dotenv = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
project-root = { workspace = true }
configparser = { workspace = true }
serde ={ workspace = true }
serde_json = { workspace = true }
byteorder = { workspace = true }
chrono =  { workspace = true }
mysql-binlog-connector-rust = { workspace = true }
mongodb = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
nom = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
kafka = { workspace = true }
apache-avro = {workspace = true}
log = { workspace = true }
redis = { workspace = true }
mlua = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
concurrent-queue = { workspace = true }
# override the features of indirectly dependent packages (openssl-sys/openssl) to ["vendored"]
# refer: https://github.com/cross-rs/cross/blob/main/docs/recipes.md#openssl
openssl = { workspace = true }
openssl-sys = { workspace = true }
hex = { workspace = true }
duckdb = { workspace = true }