[package]
name = "dt-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
dt-common = {path = "../dt-common", version = "0.1.0"}
dt-meta = {path = "../dt-meta", version = "0.1.0"}
dt-connector = {path = "../dt-connector", version = "0.1.0"}

async-trait = { workspace = true }
async-mutex = { workspace = true }
tokio = { workspace = true }
concurrent-queue = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }