[package]
name = "dt-precheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dt-common ={ path = "../dt-common", version = "0.1.0"}
sqlx = {version = "0.6.2", features = ["runtime-async-std-rustls", "mysql", "postgres", "decimal", "bigdecimal", "ipnetwork", "mac_address", "bit-vec", "time", "chrono", "json", "uuid"]}
strum = { version = "0.21.0", features = ["derive"] }
async-trait = "0.1.64"
tokio = { version = "1.25.0", features = ["full"] }
configparser = "3.0.2"
futures = "0.3.25"
regex = "1.7.1"
