[package]
name = "dt-precheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dt-common = { path = "../dt-common", version = "0.1.0"}
dt-meta = { path = "../dt-meta", version = "0.1.0"}

sqlx = {workspace = true, features = ["runtime-async-std-rustls", "mysql", "postgres", "decimal", "bigdecimal", "ipnetwork", "mac_address", "bit-vec", "time", "chrono", "json", "uuid"]}
strum = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
configparser = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
mongodb = { workspace = true }
