[package]
name = "dt-precheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
dt-common = { path = "../dt-common", version = "0.1.0"}
dt-task = { path = "../dt-task", version = "0.1.0" }
dt-connector = { path = "../dt-connector", version = "0.1.0" }

sqlx = {workspace = true }
strum = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
configparser = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
mongodb = { workspace = true }
concurrent-queue = { workspace = true }
redis = { workspace = true }