[package]
name = "dt-task"
version = "0.1.0"
edition = "2021"

[dependencies]
dt-common = {path = "../dt-common", version = "0.1.0"}
dt-meta = {path = "../dt-meta", version = "0.1.0"}
dt-connector = {path = "../dt-connector", version = "0.1.0"}
dt-parallelizer = {path = "../dt-parallelizer", version = "0.1.0"}
dt-pipeline = {path = "../dt-pipeline", version = "0.1.0"}

sqlx = { workspace = true }
async-mutex = { workspace = true }
rusoto_core = { workspace = true }
rusoto_sqs = { workspace = true }
rusoto_s3 = { workspace = true }
rusoto_credential = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
concurrent-queue = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
rdkafka = { workspace = true }
kafka = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
dotenv =  { workspace = true }
serde_yaml = { workspace = true }
serial_test = { workspace = true }
configparser = { workspace = true }
project-root = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
async-rwlock = { workspace = true }