[package]
name = "dt-tests"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
dt-common = {path = "../dt-common", version = "0.1.0"}
dt-task = {path = "../dt-task", version = "0.1.0"}
dt-connector = {path = "../dt-connector", version = "0.1.0"}
dt-precheck = {path = "../dt-precheck", version = "0.1.0"}

sqlx = { workspace = true }
rusoto_core = { workspace = true }
rusoto_sqs = { workspace = true }
rusoto_s3 = { workspace = true }
rusoto_credential = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
dotenv =  { workspace = true }
serial_test = { workspace = true }
configparser = { workspace = true }
project-root = { workspace = true }
regex = { workspace = true }
serde ={ workspace = true }
serde_json = { workspace = true }
concurrent-queue = { workspace = true }
redis = { workspace = true }
rdkafka = { workspace = true }
url = { workspace = true }
chrono =  { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
clickhouse = { workspace = true, features = ["time"] }